--- a/src/flappybird.css
+++ b/src/flappybird.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
 }
 
-.game-container {
+.board-container {
   display: flex;
   justify-content: center;
   align-items: center;
